<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_service_dialog_bottom_text_multiple">These apps can view your screen, actions, and inputs, perform actions, and control the display.</string>
    <string name="accessibility_service_dialog_bottom_text_single">%s can view your screen, actions, and inputs, perform actions, and control the display.</string>
    <string name="accessibility_service_dialog_title_multiple">%s accessibility apps have full access to your device</string>
    <string name="accessibility_service_dialog_title_single">%s has full access to your device</string>
    <string name="additional_permissions">Additional permissions</string>
    <string name="adjust_user_sensitive_globally_summary">Show system app use of permissions in status bar, dashboard &amp; elsewhere</string>
    <string name="adjust_user_sensitive_globally_title">Show system app usage</string>
    <string name="adjust_user_sensitive_per_app_header">Highlight usage for the following</string>
    <string name="adjust_user_sensitive_title">Advanced settings</string>
    <string name="all_permissions">All permissions</string>
    <string name="allow_permission_always">Always</string>
    <string name="allow_permission_foreground_only">Only while using app</string>
    <string name="allowed_always_header">Allowed all the time</string>
    <string name="allowed_foreground_header">Allowed only while in use</string>
    <string name="allowed_header">Allowed</string>
    <string name="app_name">lib_widget</string>
    <string name="app_name_unknown">Unknown</string>
    <string name="app_not_found_dlg_title">App not found</string>
    <string name="app_permission_button_allow">Allow</string>
    <string name="app_permission_button_allow_always">Allow all the time</string>
    <string name="app_permission_button_allow_foreground">Allow only while using the app</string>
    <string name="app_permission_button_deny">Deny</string>
    <string name="app_permission_footer_app_permissions_link">See all %1$s permissions</string>
    <string name="app_permission_footer_no_usages_activity_recognition">%1$s has not accessed your physical activity</string>
    <string name="app_permission_footer_no_usages_calendar">%1$s has not accessed your calendar</string>
    <string name="app_permission_footer_no_usages_call_log">%1$s has not accessed your call logs</string>
    <string name="app_permission_footer_no_usages_camera">%1$s has not accessed your camera</string>
    <string name="app_permission_footer_no_usages_contacts">%1$s has not accessed your contacts</string>
    <string name="app_permission_footer_no_usages_generic">%1$s has not accessed your %2$s</string>
    <string name="app_permission_footer_no_usages_location">%1$s has not accessed your location</string>
    <string name="app_permission_footer_no_usages_microphone">%1$s has not accessed your microphone</string>
    <string name="app_permission_footer_no_usages_phone">%1$s has not accessed your phone</string>
    <string name="app_permission_footer_no_usages_sensors">%1$s has not accessed your sensors</string>
    <string name="app_permission_footer_no_usages_sms">%1$s has not accessed your SMS</string>
    <string name="app_permission_footer_no_usages_storage">%1$s has not accessed your storage</string>
    <string name="app_permission_footer_not_available">Last access data is currently not available for this permission</string>
    <string name="app_permission_footer_permission_apps_link">See all apps with this permission</string>
    <string name="app_permission_footer_usage_summary_activity_recognition">%1$s accessed your physical activity %2$s ago</string>
    <string name="app_permission_footer_usage_summary_calendar">%1$s accessed your calendar %2$s ago</string>
    <string name="app_permission_footer_usage_summary_call_log">%1$s accessed your call logs %2$s ago</string>
    <string name="app_permission_footer_usage_summary_camera">%1$s accessed your camera %2$s ago</string>
    <string name="app_permission_footer_usage_summary_contacts">%1$s accessed your contacts %2$s ago</string>
    <string name="app_permission_footer_usage_summary_generic">%1$s accessed your %2$s %3$s ago</string>
    <string name="app_permission_footer_usage_summary_location">%1$s accessed your location %2$s ago</string>
    <string name="app_permission_footer_usage_summary_microphone">%1$s accessed your microphone %2$s ago</string>
    <string name="app_permission_footer_usage_summary_phone">%1$s accessed your phone %2$s ago</string>
    <string name="app_permission_footer_usage_summary_sensors">%1$s accessed your sensors %2$s ago</string>
    <string name="app_permission_footer_usage_summary_sms">%1$s accessed your SMS %2$s ago</string>
    <string name="app_permission_footer_usage_summary_storage">%1$s accessed your storage %2$s ago</string>
    <string name="app_permission_header">%1$s access for this app</string>
    <string name="app_permission_manager">Permission manager</string>
    <string name="app_permission_most_recent_denied_summary">Currently denied / Last access: %1$s</string>
    <string name="app_permission_most_recent_summary">Last access: %1$s</string>
    <string name="app_permission_never_accessed_denied_summary">Denied / Never accessed</string>
    <string name="app_permission_never_accessed_summary">Never accessed</string>
    <string name="app_permission_title">%1$s permission</string>
    <string name="app_permission_usage_filter_label">Filtered by: %1$s</string>
    <string name="app_permission_usage_remove_filter">See all in Dashboard</string>
    <string name="app_permission_usage_summary">Access: %1$s times. Total duration: %2$s. Last used %3$s ago.</string>
    <string name="grant_dialog_button_allow">Allow</string>
    <string name="grant_dialog_button_allow_always">Allow all the time</string>
    <string name="grant_dialog_button_allow_foreground">Allow only while using the app</string>
    <string name="grant_dialog_button_deny">Deny</string>
    <string name="grant_dialog_button_deny_and_dont_ask_again">Deny &amp; don’t ask again</string>
    <string name="grant_dialog_button_more_info">More info</string>
    <string name="never_ask_again">Don\'t ask again</string>
    <string name="review_button_cancel">Cancel</string>
    <string name="review_button_continue">Continue</string>
    <string name="role_assistant_description">Assist apps can help you based on information from the screen you’re viewing. Some apps support both launcher and voice input services to give you integrated assistance.</string>
    <string name="role_assistant_label">Default assist app</string>
    <string name="role_assistant_short_label">Assist app</string>
    <string name="role_browser_description">Apps that give you access to the internet and display links that you tap</string>
    <string name="role_browser_label">Default browser app</string>
    <string name="role_browser_request_description">No permissions needed</string>
    <string name="role_browser_request_title">Set %1$s as your default browser app?</string>
    <string name="role_browser_short_label">Browser app</string>
    <string name="role_call_redirection_description">Apps that allow you to forward outgoing calls to another phone number</string>
    <string name="role_call_redirection_label">Default call redirecting app</string>
    <string name="role_call_redirection_request_description">No permissions needed</string>
    <string name="role_call_redirection_request_title">Set %1$s as your default call redirection app?</string>
    <string name="role_call_redirection_short_label">Call redirecting app</string>
    <string name="role_call_screening_description">Apps that allow you to identify calls, block spam and robocalls, and blacklist unwanted numbers</string>
    <string name="role_call_screening_label">Default caller ID &amp; spam app</string>
    <string name="role_call_screening_request_description">No permissions needed</string>
    <string name="role_call_screening_request_title">Set %1$s as your default caller ID &amp; spam app?</string>
    <string name="role_call_screening_short_label">Caller ID &amp; spam app</string>
    <string name="role_dialer_description">Apps that allow you to make and receive telephone calls on your device</string>
    <string name="role_dialer_label">Default phone app</string>
    <string name="role_dialer_request_description">Gets access to call log, send SMS</string>
    <string name="role_dialer_request_title">Set %1$s as your default phone app?</string>
    <string name="role_dialer_short_label">Phone app</string>
    <string name="role_emergency_description">Apps that allow you to record your medical info and make it accessible to emergency responders; to get alerts about severe weather events and disasters; to notify others when you need help</string>
    <string name="role_emergency_label">Default emergency app</string>
    <string name="role_emergency_request_description">No permissions needed</string>
    <string name="role_emergency_request_title">Set %1$s as your default emergency app?</string>
    <string name="role_emergency_short_label">Emergency app</string>
    <string name="role_home_description">Apps, often called launchers, that replace the Home screens on your Android device and give you access to the contents and features of your device</string>
    <string name="role_home_label">Default home app</string>
    <string name="role_home_request_description">No permissions needed</string>
    <string name="role_home_request_title">Set %1$s as your default home app?</string>
    <string name="role_home_short_label">Home app</string>
    <string name="role_sms_description">Apps that allow you to use your phone number to send and receive short text messages, photos, videos, and more</string>
    <string name="role_sms_label">Default SMS app</string>
    <string name="role_sms_request_description">Gets access to contacts, SMS, phone</string>
    <string name="role_sms_request_title">Set %1$s as your default SMS app?</string>
    <string name="role_sms_short_label">SMS app</string>
</resources>