<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/PermissionGrantScrollView">
    <LinearLayout style="@style/PermissionGrantSingleton">
        <LinearLayout android:theme="@style/Theme.PermissionGrantDialog" style="@style/PermissionGrantDialog">
            <LinearLayout android:id="@+id/content_container" style="@style/PermissionGrantContent">
                <LinearLayout style="@style/PermissionGrantDescription">
                    <ImageView android:id="@+id/permission_icon" style="@style/PermissionGrantTitleIcon"/>
                    <TextView android:id="@+id/permission_message" style="@style/PermissionGrantTitleMessage"/>
                </LinearLayout>
                <TextView android:id="@+id/detail_message" style="@style/PermissionGrantDetailMessage"/>
            </LinearLayout>
            <LinearLayout style="@style/PermissionGrantButtonList">
                <Space style="@style/PermissionGrantButtonBarSpace"/>
                <Button android:id="@+id/permission_allow_button" android:text="@string/grant_dialog_button_allow" style="@style/PermissionGrantButtonAllow"/>
                <Button android:id="@+id/permission_allow_always_button" android:text="@string/grant_dialog_button_allow_always" style="@style/PermissionGrantButtonAllowAlways"/>
                <Button android:id="@+id/permission_allow_foreground_only_button" android:text="@string/grant_dialog_button_allow_foreground" style="@style/PermissionGrantButtonAllowForeground"/>
                <Button android:id="@+id/permission_deny_button" android:text="@string/grant_dialog_button_deny" style="@style/PermissionGrantButtonDeny"/>
                <Button android:id="@+id/permission_deny_and_dont_ask_again_button" android:text="@string/grant_dialog_button_deny_and_dont_ask_again" style="@style/PermissionGrantButtonDenyDontAskAgain"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
