<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/PermissionReview">
    <LinearLayout android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/PermissionReviewDescription">
        <ImageView android:id="@+id/app_icon" android:visibility="visible" style="@style/PermissionReviewTitleIcon"/>
        <TextView android:id="@+id/permissions_message" android:visibility="visible" style="@style/PermissionReviewTitleMessage"/>
    </LinearLayout>
    <FrameLayout android:id="@+id/preferences_frame" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1" style="@style/PermissionReviewSettings"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" style="?android:attr/buttonBarStyle">
        <Button android:id="@+id/permission_more_info_button" android:visibility="gone" android:text="@string/grant_dialog_button_more_info" style="@style/PermissionReviewButtonMoreInfo"/>
        <Space style="@style/PermissionReviewButtonBarSpace"/>
        <LinearLayout android:id="@+id/button_group" style="@style/PermissionReviewButtonBar">
            <Button android:id="@+id/cancel_button" android:text="@string/review_button_cancel" style="@style/PermissionReviewButtonCancel"/>
            <Button android:id="@+id/continue_button" android:text="@string/review_button_continue" style="@style/PermissionReviewButtonContinue"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
