<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/app_permission_root" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.core.widget.NestedScrollView android:id="@+id/nested_scroll_view" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/AppPermission">
            <include layout="@layout/header_large"/>
            <LinearLayout style="@style/AppPermissionSelection">
                <TextView android:id="@+id/permission_message" style="@style/AppPermissionMessage"/>
                <RadioGroup android:id="@+id/radiogroup" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
                    <RadioButton android:id="@+id/allow_radio_button" android:text="@string/app_permission_button_allow_always" style="@style/AppPermissionRadioButton"/>
                    <RadioButton android:id="@+id/foreground_only_radio_button" android:text="@string/app_permission_button_allow_foreground" style="@style/AppPermissionRadioButton"/>
                    <RadioButton android:id="@+id/deny_radio_button" android:text="@string/app_permission_button_deny" style="@style/AppPermissionRadioButton"/>
                </RadioGroup>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:id="@+id/permission_details" style="@style/AppPermissionDetails"/>
                    <LinearLayout android:id="@+id/two_target_divider" style="@style/AppPermissionTwoTargetDivider">
                        <View android:background="@drawable/list_divider_dark" android:layout_width="1dp" android:layout_height="match_parent"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/widget_frame" style="@style/AppPermissionWidgetFrame"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout style="@style/AppPermissionFooter">
                <View android:id="@+id/divider" style="@style/AppPermissionFooterDivider"/>
                <TextView android:id="@+id/usage_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AppPermissionFooterText"/>
                <TextView android:id="@+id/footer_link_1" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AppPermissionFooterLink"/>
                <TextView android:id="@+id/footer_link_2" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AppPermissionFooterLink"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
